<resources>
    <string name="app_name">AdoteFacil</string>
    <string name="title_activity_bem_vindo">Bem Vindo</string>
    <string name="btn_acessar_app">Clique aqui para acessar</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Galeria</string>
    <string name="menu_slideshow">Anunciar</string>
    <string name="menu_about">Sobre</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="hint_senha">senha\n</string>
    <string name="hint_confirmasenha">confirma senha\n</string>
    <string name="texto_botao_cadastrar">Cadastrar</string>
    <string name="hint_email">digite seu email</string>
    <string name="hint_nome">digite seu nome</string>
    <string name="titulo_form_cadastro">Cadastro de usuário</string>
    <string name="titulo_form_login">Login</string>
    <string name="texto_botao_entrar">Entrar</string>
    <string name="hint_sobrenome">digite seu sobrenome</string>
    <string name="hint_cpf">digite seu cpf</string>
    <string name="hint_nascimento">digite sua data de nascimento</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tela_em_construcao">Em breve: Nova tela em desenvolvimento!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>